force-app/main/default/objects/departures_dates__c/fields/Ticketing_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Ticketing_Consultant__c</fullName>
    <formula>Deal_for_Reporting__r.Ticketing_Consultant__r.FirstName &amp; &quot; &quot; &amp; Deal_for_Reporting__r.Ticketing_Consultant__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticketing Consultant</label>
    <type>Text</type>
</CustomField>