force-app/main/default/objects/departures_dates__c/fields/ToCalculate__c.field-meta.xml
<CustomField>
    <fullName>ToCalculate__c</fullName>
    <formula>date__c  &gt;  DATE(2022,01,01) &amp;&amp; date__c  &lt;  DATE(2024,12,12) &amp;&amp;  RecordType.Name=&apos;Departure Date&apos; &amp;&amp; Allocation_Table__r.ON_Sold__c =0 &amp;&amp; (Total_Hold_ON__c!=0 || Total_Sold_ON_formula__c!=0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ToCalculate</label>
    <type>Checkbox</type>
</CustomField>