force-app/main/default/objects/departures_dates__c/fields/Total_Hold_ON__c.field-meta.xml
<CustomField>
    <fullName>Total_Hold_ON__c</fullName>
    <inlineHelpText>Rollup Helper - roll up of ON (POE) of Held status for this dep date</inlineHelpText>
    <label>Total Hold (ON)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>