force-app/main/default/objects/departures_dates__c/fields/Total_Hold_POE__c.field-meta.xml
<CustomField>
    <fullName>Total_Hold_POE__c</fullName>
    <formula>Allocation_Table__r.ON_Held__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field refers to TAD orders (POE) - and is a roll up summary of ON Held field on Allocation table</inlineHelpText>
    <label>Total Hold (POE)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>