force-app/main/default/objects/departures_dates__c/fields/Total_In_Progress_ON__c.field-meta.xml
<CustomField>
    <fullName>Total_In_Progress_ON__c</fullName>
    <label>Total In Progress (ON)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>