force-app/main/default/objects/departures_dates__c/fields/Total_Min_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Total_Min_In_Progress__c</fullName>
    <formula>IF( Allocation_Table__r.Cruise_Solo_Check__c==true, (Total_In_Progress_ON__c+ Total_Solo_In_Progress_ON__c),  Total_In_Progress_ON__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Min In Progress (ON)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>