force-app/main/default/objects/departures_dates__c/fields/Total_Orders__c.field-meta.xml
<CustomField>
    <fullName>Total_Orders__c</fullName>
    <label>Total Orders</label>
    <summaryFilterItems>
        <field>order__c.order_status__c</field>
        <operation>notEqual</operation>
        <value>On Hold, Cancelled, Expired</value>
    </summaryFilterItems>
    <summaryForeignKey>order__c.departures_dates__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>