force-app/main/default/objects/departures_dates__c/fields/Total_PAX_Qty__c.field-meta.xml
<CustomField>
    <fullName>Total_PAX_Qty__c</fullName>
    <label>Total PAX Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>