force-app/main/default/objects/departures_dates__c/fields/Total_PAX_Sold__c.field-meta.xml
<CustomField>
    <fullName>Total_PAX_Sold__c</fullName>
    <formula>Total_PAX_Qty__c  * IF( NOT(ISBLANK( Deal__c )) ,  VALUE(TEXT(Deal__r.PAX_included_per_deal__c))  , IF(NOT(ISBLANK( DealID_from_Option__c )),  VALUE(text(options__r.Deal__r.PAX_included_per_deal__c)) ,  VALUE(text(sub_options__r.options__r.Deal__r.PAX_included_per_deal__c))  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total PAX Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>