force-app/main/default/objects/departures_dates__c/fields/Total_Sold_ON__c.field-meta.xml
<CustomField>
    <fullName>Total_Sold_ON__c</fullName>
    <label>Total Sold (ON)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>