force-app/main/default/objects/departures_dates__c/fields/Total_Sold_ON_formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Sold_ON_formula__c</fullName>
    <formula>Total_Secured_ON__c+ Total_In_Progress_ON__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sold (ON)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>