force-app/main/default/objects/departures_dates__c/fields/Total_soldhold__c.field-meta.xml
<CustomField>
    <fullName>Total_soldhold__c</fullName>
    <label>Total soldhold</label>
    <summarizedField>order__c.qty__c</summarizedField>
    <summaryFilterItems>
        <field>order__c.order_status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled, Expired</value>
    </summaryFilterItems>
    <summaryForeignKey>order__c.departures_dates__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>