force-app/main/default/objects/departures_dates__c/fields/Total_Solo_Sold_ON__c.field-meta.xml
<CustomField>
    <fullName>Total_Solo_Sold_ON__c</fullName>
    <inlineHelpText>Rollup Helper - roll up of ON (POE) Solo of Active status for this dep date</inlineHelpText>
    <label>Total Solo Sold (ON)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>