force-app/main/default/objects/departures_dates__c/fields/tour_operator_emergency_contact__c.field-meta.xml
<CustomField>
    <fullName>tour_operator_emergency_contact__c</fullName>
    <label>Tour Operator Emergency Contact</label>
    <length>25</length>
    <type>Text</type>
</CustomField>