force-app/main/default/objects/departures_dates__c/fields/tour_operator_emergency_name__c.field-meta.xml
<CustomField>
    <fullName>tour_operator_emergency_name__c</fullName>
    <label>Tour Operator Emergency Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>