force-app/main/default/objects/departures_dates__c/fields/TP_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>TP_Due_Date__c</fullName>
    <formula>date__c - 45</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TP Due Date</label>
    <type>Date</type>
</CustomField>