force-app/main/default/objects/departures_dates__c/fields/travel_days_created__c.field-meta.xml
<CustomField>
    <fullName>travel_days_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Days Created</label>
    <type>Checkbox</type>
</CustomField>