force-app/main/default/objects/departures_dates__c/fields/travel_documentation_created__c.field-meta.xml
<CustomField>
    <fullName>travel_documentation_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Documentation Created</label>
    <type>Checkbox</type>
</CustomField>