force-app/main/default/objects/departures_dates__c/fields/travel_documentation_precheck__c.field-meta.xml
<CustomField>
    <fullName>travel_documentation_precheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Documentation Precheck</label>
    <type>Checkbox</type>
</CustomField>