force-app/main/default/objects/departures_dates__c/fields/Travel_Pack_Delay_Comms_For_All_Orders__c.field-meta.xml
<CustomField>
    <fullName>Travel_Pack_Delay_Comms_For_All_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Pack Delay Comms For All Orders</label>
    <type>Checkbox</type>
</CustomField>