force-app/main/default/objects/departures_dates__c/fields/Unique_Date__c.field-meta.xml
<CustomField>
    <fullName>Unique_Date__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>