force-app/main/default/objects/departures_dates__c/fields/Unsold_Bednights__c.field-meta.xml
<CustomField>
    <fullName>Unsold_Bednights__c</fullName>
    <formula>Nights__c *  Remaining_Allocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unsold Bed Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>