force-app/main/default/objects/departures_dates__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <formula>&apos;www.tripadeal.com.au/deals/&apos;&amp;
IF( NOT(ISBLANK( Deal__c )) ,  Deal__r.URL__c  , IF(NOT(ISBLANK( DealID_from_Option__c )), options__r.Deal__r.URL__c ,  sub_options__r.options__r.Deal__r.URL__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL</label>
    <type>Text</type>
</CustomField>