force-app/main/default/objects/departures_dates__c/fields/Week_prior_BC_due__c.field-meta.xml
<CustomField>
    <fullName>Week_prior_BC_due__c</fullName>
    <formula>BC_Due__c  - 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week prior BC due</label>
    <type>Date</type>
</CustomField>