force-app/main/default/objects/departures_dates__c/fields/WT_Sold__c.field-meta.xml
<CustomField>
    <fullName>WT_Sold__c</fullName>
    <label>WT Sold</label>
    <summarizedField>order__c.qty__c</summarizedField>
    <summaryFilterItems>
        <field>order__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>WT</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>order__c.order_status__c</field>
        <operation>notEqual</operation>
        <value>On Hold, Cancelled, Expired</value>
    </summaryFilterItems>
    <summaryForeignKey>order__c.departures_dates__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>