force-app/main/default/objects/departures_dates__c/recordTypes/Departure_Date.recordType-meta.xml
<RecordType>
    <fullName>Departure_Date</fullName>
    <active>true</active>
    <description>This is new record type being created so that we can distinguish between Departure Date and Hotel Room Availability Record.</description>
    <label>Departure Date</label>
</RecordType>