force-app/main/default/objects/departures_dates__c/recordTypes/Hotel_Room_Availability.recordType-meta.xml
<RecordType>
    <fullName>Hotel_Room_Availability</fullName>
    <active>true</active>
    <description>This is a new Record Type created for Siteminder Integration. (This shall act as the third primary object i.e. Room Availability))</description>
    <label>Hotel Room Availability</label>
</RecordType>