force-app/main/default/objects/departures_dates__c/validationRules/Allocation_below_SoldHold.validationRule-meta.xml
<ValidationRule>
    <fullName>Allocation_below_SoldHold</fullName>
    <active>true</active>
    <errorConditionFormula>allocation__c &lt; Total_soldhold__c</errorConditionFormula>
    <errorMessage>The TOTAL ALLOCATION cannot be changed to less than Total soldhold or Total soldhold is trying to be updated to greater than Total Allocation. Firstly, Talk to the Deal BDM and Content Producers to work out resolution.</errorMessage>
</ValidationRule>