force-app/main/default/objects/departures_dates__c/validationRules/Create_Days_Poe_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Create_Days_Poe_Check</fullName>
    <active>true</active>
    <description>If date_Notes__c field at the Departure date has value in it, and user tick the Create Days POE checkbox, throw a validation message “Please refer to the Date Notes“ and if its blank don’t throw any validation message.</description>
    <errorConditionFormula>AND( NOT(ISBLANK( date_notes__c )) , Create_Days_POE__c = True )</errorConditionFormula>
    <errorDisplayField>date_notes__c</errorDisplayField>
    <errorMessage>Please refer to the Date Notes</errorMessage>
</ValidationRule>