force-app/main/default/objects/departures_dates__c/validationRules/Date_Must_be_offline_to_finalise.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Must_be_offline_to_finalise</fullName>
    <active>true</active>
    <description>Date must be offline to finalise</description>
    <errorConditionFormula>AND( finalise_date__c , ISPICKVAL( Status__c ,&apos;Online&apos;) )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Date must be offline to finalise</errorMessage>
</ValidationRule>