force-app/main/default/objects/departures_dates__c/validationRules/Finalised_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Finalised_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 finalise_date__c,
 NOT($Permission.Finalised_Date),
 OR(Active__c,recently_expired__c)
)</errorConditionFormula>
    <errorMessage>Tst tst tst no no no, you cannot activate a finalised date, please communicate with logistics your reasons to unlock this date. Better together!</errorMessage>
</ValidationRule>