force-app/main/default/objects/departures_dates__c/validationRules/Flight_Ticketing_Group_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Flight_Ticketing_Group_Selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Flight_Ticketing_Structure__c , &apos;Group&apos;),
OR(
INCLUDES(Airline__c , &apos;None&apos;),
INCLUDES(Airline__c , &apos;&apos;)
)
)</errorConditionFormula>
    <errorMessage>Populate Airline</errorMessage>
</ValidationRule>