force-app/main/default/objects/departures_dates__c/validationRules/Open_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Open_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 finalise_date__c,
 $Profile.Name = &apos;TAD Logistics Consultant - Lightning&apos;,
 Active__c
)</errorConditionFormula>
    <errorMessage>Tst tst tst no no no logistics, you cannot finalise an Active date. Please communicate with the content producers to finalise this date. Better together!</errorMessage>
</ValidationRule>