force-app/main/default/objects/departures_dates__c/validationRules/Site_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Site_Change</fullName>
    <active>true</active>
    <description>This rule prevents Site change if Total Hold or Sold &gt; 0</description>
    <errorConditionFormula>AND(
OR( Total_Sold_Hold_POE__c &gt;0),
ISCHANGED( site__c )
)</errorConditionFormula>
    <errorDisplayField>site__c</errorDisplayField>
    <errorMessage>You cannot change the SITE/S as there are CONFIRMED or ON HOLD orders linked to this departure date. Please create a new departure date instead.</errorMessage>
</ValidationRule>