force-app/main/default/objects/departures_dates__c/validationRules/Sub_Option_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Sub_Option_Change</fullName>
    <active>true</active>
    <description>This rule prevents Sub Option change if Total Hold or Sold &gt; 0</description>
    <errorConditionFormula>AND(
OR( Total_Sold_Hold_POE__c &gt;0),
ISCHANGED( sub_options__c )
)</errorConditionFormula>
    <errorDisplayField>sub_options__c</errorDisplayField>
    <errorMessage>You cannot change the SUB OPTION as there are CONFIRMED or ON HOLD orders linked to this departure date. Please create a new departure date instead.</errorMessage>
</ValidationRule>