force-app/main/default/objects/departures_dates__c/validationRules/v3_Allocation_not_v2_Allocation.validationRule-meta.xml
<ValidationRule>
    <fullName>v3_Allocation_not_v2_Allocation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
special_date__c ,  
allocation__c &lt;&gt; PRIORVALUE(allocation__c) 
)</errorConditionFormula>
    <errorMessage>Snitty says NO! You can&apos;t change me! So go change Esmae, the Total v3 Allocation Field on Allocation record instead. I am a special date!</errorMessage>
</ValidationRule>