force-app/main/default/objects/departures_dates__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>sub_options__c</columns>
    <columns>Deal_for_Reporting__c</columns>
    <columns>options__c</columns>
    <columns>HSS_amount__c</columns>
    <columns>Remaining_Allocation__c</columns>
    <columns>allocation__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TC_Exclusive__c</columns>
    <columns>ordexp_return_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>departures_dates__c.Departure_Date</value>
    </filters>
    <label>All</label>
</ListView>