force-app/main/default/objects/departures_dates__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>date__c</columns>
    <columns>Deal__c</columns>
    <columns>options__c</columns>
    <columns>sub_options__c</columns>
    <columns>DealID_from_Option__c</columns>
    <columns>DealID_from_Sub_Option__c</columns>
    <columns>Remaining_Allocation__c</columns>
    <columns>Deal_D_O_S__c</columns>
    <columns>DealId_D_O_S__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>