force-app/main/default/objects/departures_dates__c/listViews/Allocation_Offline_Online.listView-meta.xml
<ListView>
    <fullName>Allocation_Offline_Online</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Deal_for_Reporting__c</columns>
    <columns>online_status__c</columns>
    <columns>Active__c</columns>
    <columns>recently_expired__c</columns>
    <columns>Remaining_Allocation__c</columns>
    <columns>Deal_Status__c</columns>
    <columns>finalise_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>online_status__c</field>
        <operation>equals</operation>
        <value>Online</value>
    </filters>
    <filters>
        <field>Remaining_Allocation__c</field>
        <operation>lessOrEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>BNCDL__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Deal_Status__c</field>
        <operation>notEqual</operation>
        <value>Expired</value>
    </filters>
    <label>Online Dates w. 0 Allocation</label>
    <sharedTo>
        <group>Product</group>
    </sharedTo>
</ListView>