force-app/main/default/objects/departures_dates__c/listViews/Allocation_Online_check.listView-meta.xml
<ListView>
    <fullName>Allocation_Online_check</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Deal_for_Reporting__c</columns>
    <columns>has_dep_date_passed__c</columns>
    <columns>online_status__c</columns>
    <columns>Active__c</columns>
    <columns>recently_expired__c</columns>
    <columns>Remaining_Allocation__c</columns>
    <columns>Deal_Status__c</columns>
    <columns>finalise_date__c</columns>
    <columns>Stop_Sell_Open_Sell__c</columns>
    <columns>BNCDL__c</columns>
    <columns>Data_Refresh__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>online_status__c</field>
        <operation>equals</operation>
        <value>Offline - Auto</value>
    </filters>
    <filters>
        <field>Remaining_Allocation__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>finalise_date__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
    </filters>
    <label>Allocation - Online check</label>
    <sharedTo>
        <group>IT_Team</group>
    </sharedTo>
</ListView>