force-app/main/default/objects/departures_dates__c/listViews/BNCDL_Dep_Dates.listView-meta.xml
<ListView>
    <fullName>BNCDL_Dep_Dates</fullName>
    <columns>NAME</columns>
    <columns>Deal_for_Reporting__c</columns>
    <columns>options__c</columns>
    <columns>BNCDL__c</columns>
    <columns>has_dep_date_passed__c</columns>
    <columns>online_status__c</columns>
    <columns>Active__c</columns>
    <columns>recently_expired__c</columns>
    <columns>Remaining_Allocation__c</columns>
    <columns>Deal_Status__c</columns>
    <columns>finalise_date__c</columns>
    <columns>Data_Refresh__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BNCDL__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Deal_for_Reporting__c</field>
        <operation>equals</operation>
        <value>3779</value>
    </filters>
    <label>BNCDL - Dep Dates</label>
    <sharedTo>
        <group>IT_Team</group>
    </sharedTo>
</ListView>