force-app/main/default/objects/departures_dates__c/listViews/BNCDL_Siteminder.listView-meta.xml
<ListView>
    <fullName>BNCDL_Siteminder</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>OBJECT_ID</columns>
    <columns>Room_Type_Unique_Identifier__c</columns>
    <columns>Deal__c</columns>
    <columns>BNCDL__c</columns>
    <columns>Remaining_Allocation__c</columns>
    <columns>Stop_Sell_Open_Sell__c</columns>
    <columns>Maximum_LOS__c</columns>
    <columns>Minimum_LOS__c</columns>
    <columns>Data_Refresh__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BNCDL__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>departures_dates__c.Hotel_Room_Availability</value>
    </filters>
    <label>BNCDL - Siteminder</label>
    <sharedTo>
        <group>IT_Team</group>
    </sharedTo>
</ListView>